--- a/EmailNotificationMicroservice/build.gradle
+++ b/EmailNotificationMicroservice/build.gradle
@@ -1,11 +1,9 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.5.4'
-	id 'io.spring.dependency-management' version '1.1.7'
+//	id 'java'
+//	id 'org.springframework.boot' version '3.5.4'
+//	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.bemojr'
-version = '0.0.1-SNAPSHOT'
 description = 'Email Notification Microservice'
 
 java {
@@ -21,11 +19,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.kafka:spring-kafka'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation project(':core')
 }
 
 tasks.named('test') {
