--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id("io.spring.dependency-management") version "1.1.7"
-    id("org.springframework.boot") version "3.5.4"
-    id("java")
+    id "org.springframework.boot" version "3.5.4" apply false
+    id "io.spring.dependency-management" version "1.1.7" apply false
+    id "java"
 }
 
 allprojects {
@@ -15,8 +15,6 @@ allprojects {
 
 subprojects {
     apply plugin: "java"
-    apply plugin: "org.springframework.boot"
-    apply plugin: "io.spring.dependency-management"
 
     java {
         toolchain {
@@ -25,13 +23,20 @@ subprojects {
     }
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.kafka:spring-kafka'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testImplementation 'org.springframework.kafka:spring-kafka-test'
-        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-        compileOnly "org.projectlombok:lombok"
-        annotationProcessor "org.projectlombok:lombok"
+        compileOnly "org.projectlombok:lombok:1.18.38"
+        annotationProcessor "org.projectlombok:lombok:1.18.38"
+    }
+}
+
+configure(subprojects.findAll { it.name != "core" }) {
+    apply plugin: "org.springframework.boot"
+    apply plugin: "io.spring.dependency-management"
+
+    dependencies {
+        implementation "org.springframework.boot:spring-boot-starter-web"
+        implementation "org.springframework.kafka:spring-kafka"
         testImplementation "org.springframework.boot:spring-boot-starter-test"
+        testImplementation "org.springframework.kafka:spring-kafka-test"
+        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
     }
 }
