Mock Microservice Added (Complete)

--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,15 @@ configure(subprojects.findAll { it.name != "core" }) {
 
     dependencies {
         implementation "org.springframework.boot:spring-boot-starter-web"
-        implementation "org.springframework.kafka:spring-kafka"
         testImplementation "org.springframework.boot:spring-boot-starter-test"
-        testImplementation "org.springframework.kafka:spring-kafka-test"
         testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+    }
+}
+configure(subprojects.findAll { it.name != "core" && it.name != "MockMicroservice" }) {
+    dependencies {
+        implementation "org.springframework.kafka:spring-kafka"
+        implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+        runtimeOnly "com.h2database:h2"
+        testImplementation "org.springframework.kafka:spring-kafka-test"
     }
 }
