--- a/EmailNotificationMicroservice/src/main/resources/application-dev.yml
+++ b/EmailNotificationMicroservice/src/main/resources/application-dev.yml
@@ -1,4 +1,21 @@
 spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: ""
+
+  jpa:
+    database: H2
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
   mail:
     properties:
       mail:
@@ -15,3 +32,7 @@ spring:
 
 server:
   port: 0
+
+application:
+  consumer:
+    group-id: product-created-events
