--- a/ProductsMicroservice/build.gradle
+++ b/ProductsMicroservice/build.gradle
@@ -1,9 +1,4 @@
-plugins {
-	id "org.springframework.boot"
-	id "io.spring.dependency-management"
-	id "java"
-}
-
+description = 'Products Microservice'
 
 java {
 	toolchain {
@@ -17,16 +12,10 @@ configurations {
 	}
 }
 
-repositories {
-	mavenCentral()
-}
-
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation project(':core')
-	runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
