Updated build.gradle files

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ configure(subprojects.findAll { it.name != "core" }) {
         testImplementation "org.springframework.boot:spring-boot-starter-test"
         testRuntimeOnly "org.junit.platform:junit-platform-launcher"
     }
+
+    tasks.named('test') {
+        useJUnitPlatform()
+    }
 }
 configure(subprojects.findAll { it.name != "core" && it.name != "MockMicroservice" }) {
     dependencies {
