Integration Test for Kafka Consumer (ProductCreatedEventHandler) - Done

--- a/ProductsMicroservice/src/test/resources/application-test.yml
+++ b/ProductsMicroservice/src/test/resources/application-test.yml
@@ -39,5 +39,5 @@ server:
   port: 0
 
 application:
-  topic:
-    product-created-event-topic: product-created-event
+  kafka:
+    topic-name: product-created-event
