--- a/EmailNotificationMicroservice/src/main/resources/application.yml
+++ b/EmailNotificationMicroservice/src/main/resources/application.yml
@@ -6,5 +6,7 @@ spring:
       bootstrap-servers: 172.25.128.103:9092, 172.25.128.103:9094
 #      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 #      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      group-id: product-created-event-email
+      auto-offset-reset: earliest
       properties:
         spring.json.trusted.packages: "com.bemojr.core"
