--- a/ProductsMicroservice/src/main/resources/application-dev.yml
+++ b/ProductsMicroservice/src/main/resources/application-dev.yml
@@ -20,5 +20,5 @@ server:
   port: 0
 
 application:
-  topic:
-    product-created-event-topic: "product-created-events-topic"
+  kafka:
+    topic-name: product-created-events-topic
